Fixed header horizontal spacing, setup separate buttton stylings, and finished deals-main

--- a/src/assets/scss/template/_body.scss
+++ b/src/assets/scss/template/_body.scss
@@ -6,11 +6,16 @@ body, html, .body {
   &__links {
     text-align: center;
   } a {
+    padding: 0px 6px;
+    font-weight: bold;
     &:link {
       color: black;
     }
     &:visited {
       color: black;
     }
+  }
+  span {
+    font-size: 1.5rem;
   }
 }
