--- a/src/assets/scss/template/_defaults.scss
+++ b/src/assets/scss/template/_defaults.scss
@@ -1,12 +1,6 @@
-.divider {
-    border: 2px solid gray;
-    border-style: dotted hidden hidden hidden;
-}
-
 .defaults {
-    &__btn {
-        background-color: red;
-        color: white;
-        padding: 13px 8px;
+    &__divider {
+        border: 2px solid gray;
+        border-style: dotted hidden hidden hidden;
     }
 }
